--- a/_config.yml
+++ b/_config.yml
@@ -9,7 +9,7 @@ pygments: true
 # paginate: 7
 # paginate_path: "posts.html/page:num"
 
-production_url : http://drewhop.github.io
+production_url : http://DR3WH0.github.io
 
 # All Jekyll-Bootstrap specific configurations are namespaced into this hash
 #
@@ -40,7 +40,7 @@ JB :
 markdown: rdiscount
 prose:
   rooturl: '_posts'
-  siteurl: 'http://drewhop.github.io/'
+  siteurl: 'http://DR3WH0.github.io/'
 #  relativeLinks: 'http://prose.github.io/starter/links.jsonp'
 #  media: 'media'
   metadata:
