--- a/_config.yml
+++ b/_config.yml
@@ -47,42 +47,42 @@ prose:
     _posts:
       - name: "published"
         field:
-        - element: "checkbox"
+          element: "checkbox"
           label: "Publish"
           value: "true"
       - name: "layout"
         field:
-        - element: "hidden"
+          element: "hidden"
           value: "post"
       - name: "title"
         field:
-        - element: "text"
+          element: "text"
           label: "Title"
           value: ""
       - name: "tags"
         field:
-        - element: "text"
+          element: "text"
           label: "Tags"
           value: ""
       - name: "category"
         field:
-        - element: "hidden"
+          element: "hidden"
           value: "DR3WH0"
 
-tracks:
-  - track:
-    - name: "Aphex Twin - Avril 14th"
-      url: "http://www.youtube.com/watch?v=MBFXJw7n-fU"
-  - track:
-    - name: "Low - Fearless (P.Floyd Cover)"
-      url: "http://www.youtube.com/watch?v=2LyEcWxI3UQ"
-  - track:
-    - name: "Radiohead Acoustic Collection"
-      url: "http://www.youtube.com/watch?v=qDK0ZxVBHoA"
-  - track:
-    - name: "Stars Of The Lid - December Hunting"
-      url: "http://www.youtube.com/watch?v=u-MXZDkcPKM"
-  - track:
-    - name: "Abfarhrt Hinwil - Radiowellen"
-      url: "http://t.co/JrzTapEmhw"
+tracks :
+    track :
+      name : Aphex Twin - Avril 14th
+      url : http://www.youtube.com/watch?v=MBFXJw7n-fU
+    track :
+      name : Low - Fearless (P.Floyd Cover)
+      url : http://www.youtube.com/watch?v=2LyEcWxI3UQ
+    track :
+      name : Radiohead Acoustic Collection
+      url : http://www.youtube.com/watch?v=qDK0ZxVBHoA
+    track :
+      name : Stars Of The Lid - December Hunting
+      url : http://www.youtube.com/watch?v=u-MXZDkcPKM
+    track :
+      name : Abfarhrt Hinwil - Radiowellen
+      url : http://t.co/JrzTapEmhw
 
