--- a/_config.yml
+++ b/_config.yml
@@ -69,20 +69,20 @@ prose:
           element: "hidden"
           value: "DR3WH0"
 
-tracks:
-  - track:
-      name: Aphex Twin - Avril 14th
-      url: http://www.youtube.com/watch?v=MBFXJw7n-fU
-  - track:
-      name: Low - Fearless (P.Floyd Cover)
-      url: http://www.youtube.com/watch?v=2LyEcWxI3UQ
-  - track:
-      name: Radiohead Acoustic Collection
-      url: http://www.youtube.com/watch?v=qDK0ZxVBHoA
-  - track:
-      name: Stars Of The Lid - December Hunting
-      url: http://www.youtube.com/watch?v=u-MXZDkcPKM
-  - track:
-      name: Abfarhrt Hinwil - Radiowellen
-      url: http://t.co/JrzTapEmhw
+tracks :
+    track :
+      name : Aphex Twin - Avril 14th
+      url : http://www.youtube.com/watch?v=MBFXJw7n-fU
+    track :
+      name : Low - Fearless (P.Floyd Cover)
+      url : http://www.youtube.com/watch?v=2LyEcWxI3UQ
+    track :
+      name : Radiohead Acoustic Collection
+      url : http://www.youtube.com/watch?v=qDK0ZxVBHoA
+    track :
+      name : Stars Of The Lid - December Hunting
+      url : http://www.youtube.com/watch?v=u-MXZDkcPKM
+    track :
+      name : Abfarhrt Hinwil - Radiowellen
+      url : http://t.co/JrzTapEmhw
 
