--- a/_config.yml
+++ b/_config.yml
@@ -70,12 +70,12 @@ prose:
           value: "DR3WH0"
 
 tracks :
-  - track :
-    - name : "Aphex Twin - Avril 14th"
-      url : "http://www.youtube.com/watch?v=MBFXJw7n-fU"
-  - track :
-    - name : "Low - Fearless (P.Floyd Cover)"
-      url : "http://www.youtube.com/watch?v=2LyEcWxI3UQ"
+  track :
+    name : "Aphex Twin - Avril 14th"
+    url : "http://www.youtube.com/watch?v=MBFXJw7n-fU"
+  track :
+    name : "Low - Fearless (P.Floyd Cover)"
+    url : "http://www.youtube.com/watch?v=2LyEcWxI3UQ"
   track :
     name : "Radiohead Acoustic Collection"
     url : "http://www.youtube.com/watch?v=qDK0ZxVBHoA"
