add Com Truise track

--- a/_config.yml
+++ b/_config.yml
@@ -78,4 +78,5 @@ tracks :
     url : http://www.youtube.com/watch?v=u-MXZDkcPKM
   - name : Abfarhrt Hinwil - Radiowellen
     url : http://t.co/JrzTapEmhw
-
+  - name : Com Truise - Cyanide Sisters 
+    url : http://t.co/BRepBDsdAz
