--- a/_config.yml
+++ b/_config.yml
@@ -80,3 +80,6 @@ tracks :
     url : http://t.co/JrzTapEmhw
   - name : Com Truise - Cyanide Sisters 
     url : http://t.co/BRepBDsdAz
+  - name : Point 7 - One Movie
+    url : http://freedownloads.last.fm/download/209722767/One%2BMovie.mp3
+
