--- a/_config.yml
+++ b/_config.yml
@@ -80,9 +80,9 @@ tracks :
     url : http://t.co/JrzTapEmhw
   - name : Com Truise - Cyanide Sisters 
     url : http://t.co/BRepBDsdAz
-  - name : Point 7 - One Movie
-    url : http://freedownloads.last.fm/download/209722767/One%2BMovie.mp3
+#  - name : Point 7 - One Movie
+#    url : http://freedownloads.last.fm/download/209722767/One%2BMovie.mp3
   - name : Gimmik - Sister Moon
     url : http://goo.gl/MTuAeR
-    date: 2013-08-26 Mon 21:04:38
+#    date: 2013-08-26 Mon 21:04:38
 
