--- a/_config.yml
+++ b/_config.yml
@@ -84,5 +84,5 @@ tracks :
     url : http://freedownloads.last.fm/download/209722767/One%2BMovie.mp3
   - name : Gimmik - Sister Moon
     url : http://goo.gl/MTuAeR
-    date: 2013-08-26 Mon 21:04:38
-
+  - name : zotalayer - ebb telemetry
+    url : http://t.co/aN2HsvUyAK
