--- a/_config.yml
+++ b/_config.yml
@@ -90,4 +90,5 @@ tracks :
     url : http://freedownloads.last.fm/download/798/Ernie%2B%2526%2BBert.mp3
   - name : Abfarht Hinwil - Bumperstufe2
     url : http://t.co/7ZG79jKjQs
-
+  - name : Point 7 - Ous
+    url : http://t.co/S3zq3Oyuy7
