--- a/_config.yml
+++ b/_config.yml
@@ -74,8 +74,8 @@ tracks :
     url : http://www.youtube.com/watch?v=MBFXJw7n-fU
   - name : Low - Fearless (P.Floyd Cover)
     url : http://www.youtube.com/watch?v=2LyEcWxI3UQ
-  - name : Stars Of The Lid - December Hunting
-    url : http://www.youtube.com/watch?v=u-MXZDkcPKM
+#  - name : Stars Of The Lid - December Hunting
+#    url : http://www.youtube.com/watch?v=u-MXZDkcPKM
   - name : Abfarhrt Hinwil - Radiowellen
     url : http://t.co/JrzTapEmhw
   - name : Com Truise - Cyanide Sisters 
@@ -92,3 +92,6 @@ tracks :
     url : http://t.co/7ZG79jKjQs
   - name : Point 7 - Ous
     url : http://t.co/S3zq3Oyuy7
+  - name : Gimmik - Back to Basics
+    url : http://t.co/PuisfO2zhP
+
