--- a/_config.yml
+++ b/_config.yml
@@ -94,4 +94,6 @@ tracks :
     url : http://t.co/S3zq3Oyuy7
   - name : Gimmik - Back to Basics
     url : http://t.co/PuisfO2zhP
+  - name : Sense - zed
+    url : http://t.co/WM16WZ9ug6
 
