--- a/_config.yml
+++ b/_config.yml
@@ -96,4 +96,7 @@ tracks :
     url : http://t.co/PuisfO2zhP
   - name : Sense - zed
     url : http://t.co/WM16WZ9ug6
+  - name : Point 7 - Hacker IP
+    url : http://t.co/YIjeAFdwzi
+
 
