--- a/_config.yml
+++ b/_config.yml
@@ -74,8 +74,8 @@ tracks :
     url : http://www.youtube.com/watch?v=MBFXJw7n-fU
   - name : Low - Fearless (P.Floyd Cover)
     url : http://www.youtube.com/watch?v=2LyEcWxI3UQ
-#  - name : Stars Of The Lid - December Hunting
-#    url : http://www.youtube.com/watch?v=u-MXZDkcPKM
+  - name : Stars Of The Lid - December Hunting
+    url : http://www.youtube.com/watch?v=u-MXZDkcPKM
   - name : Abfarhrt Hinwil - Radiowellen
     url : http://t.co/JrzTapEmhw
   - name : Com Truise - Cyanide Sisters 
