--- a/_config.yml
+++ b/_config.yml
@@ -98,5 +98,9 @@ tracks :
     url : http://t.co/WM16WZ9ug6
   - name : Point 7 - Hacker IP
     url : http://t.co/YIjeAFdwzi
+  - name : Abfahrt Hinwil - Links Oben 
+    url : http://t.co/XUiKfWxTj6
+  - name : Gimmik - Thing on a Spring
+    url : http://t.co/hrwKRcv7e4
 
 
