--- a/_config.yml
+++ b/_config.yml
@@ -86,8 +86,8 @@ tracks :
     url : http://goo.gl/MTuAeR
   - name : zotalayer - ebb telemetry
     url : http://t.co/aN2HsvUyAK
-  - name : Gimmik - Ernie & Bert
-    url : http://freedownloads.last.fm/download/798/Ernie%2B%2526%2BBert.mp3
+#  - name : Gimmik - Ernie & Bert
+#    url : http://freedownloads.last.fm/download/798/Ernie%2B%2526%2BBert.mp3
   - name : Abfarht Hinwil - Bumperstufe2
     url : http://t.co/7ZG79jKjQs
   - name : Point 7 - Ous
