--- a/_config.yml
+++ b/_config.yml
@@ -66,7 +66,7 @@ prose:
           value: ""
       - name: "category"
         field:
-          element: "hidden"
+          element: "text"
           value: "DR3WH0"
 
 tracks :
