--- a/_config.yml
+++ b/_config.yml
@@ -116,5 +116,7 @@ tracks :
     url : http://t.co/XUiKfWxTj6
   - name : Gimmik - Thing on a Spring
     url : http://t.co/hrwKRcv7e4
+  - name : Abfahrt Hinwil - Sonic Surface 
+    url : http://t.co/5PfdFmiKVg
 
 
