--- a/_config.yml
+++ b/_config.yml
@@ -118,5 +118,6 @@ tracks :
     url : http://t.co/hrwKRcv7e4
   - name : Abfahrt Hinwil - Sonic Surface 
     url : http://t.co/5PfdFmiKVg
-
+  - name : Abfahrt Hinwil - Trilogy
+    url : http://t.co/Wg6EBntsgS
 
