--- a/_config.yml
+++ b/_config.yml
@@ -120,4 +120,6 @@ tracks :
     url : http://t.co/5PfdFmiKVg
   - name : Abfahrt Hinwil - Trilogy
     url : http://t.co/Wg6EBntsgS
+  - name : Abfahrt Hinwil - Tech 8
+    url : http://t.co/5vxj8bRhV9
 
