--- a/_config.yml
+++ b/_config.yml
@@ -10,7 +10,7 @@ pygments: true
 # paginate: 7
 # paginate_path: "posts.html/page:num"
 
-production_url : http://DR3WH0.github.io
+production_url : http://dr3wh0.net
 
 # All Jekyll-Bootstrap specific configurations are namespaced into this hash
 #
@@ -41,7 +41,7 @@ JB :
 markdown: rdiscount
 prose:
   rooturl: '_posts'
-  siteurl: 'http://DR3WH0.github.io/'
+  siteurl: 'http://dr3wh0.net/'
 #  relativeLinks: 'http://prose.github.io/starter/links.jsonp'
 #  media: 'media'
   metadata:
