--- a/_config.yml
+++ b/_config.yml
@@ -128,4 +128,6 @@ tracks :
     url : http://t.co/Wg6EBntsgS
   - name : Abfahrt Hinwil - Tech 8
     url : http://t.co/5vxj8bRhV9
+  - name : Robert Schumann - Lotus Flower
+    url : http://t.co/lXz85vA3er
 
