--- a/_config.yml
+++ b/_config.yml
@@ -15,7 +15,7 @@ production_url : http://dr3wh0.net
 # RSS Feed
 # https://github.com/snaptortoise/jekyll-rss-feeds
 name: DR3WH0
-description: Time Travel & Other Anomalies
+description: "Time Travel & Other Anomalies"
 url: http://dr3wh0.net
 
 # All Jekyll-Bootstrap specific configurations are namespaced into this hash
