--- a/_config.yml
+++ b/_config.yml
@@ -130,4 +130,8 @@ tracks :
     url : http://t.co/5vxj8bRhV9
   - name : Robert Schumann - Lotus Flower
     url : http://t.co/lXz85vA3er
+  - name : ESEM - Thinmute
+    url : http://t.co/Oft4EPe8lw
+  - name : Abfahrt Hinwil - The Light
+    url : http://t.co/mifR3LfBye
 
