--- a/_config.yml
+++ b/_config.yml
@@ -136,4 +136,6 @@ tracks :
     url : http://t.co/mifR3LfBye
   - name : Johannes Brahms - Ballade in Dm
     url : http://t.co/dlt70d9sPn
+  - name : Gimmik - Syntax
+    url : http://t.co/MMYKQj4Lhq
 
