--- a/_config.yml
+++ b/_config.yml
@@ -144,3 +144,7 @@ tracks :
     url : http://t.co/nt1zCg5Bhi
   - name : Motionfield - Timelines
     url : http://t.co/YCKXGIPIbc
+  - name : Iqtu - Strategy 5
+    url : http://t.co/rNBXiucwzi
+  - name : Monoceros - Sinu
+    url : http://t.co/L2CBxmzTUg
