--- a/_config.yml
+++ b/_config.yml
@@ -150,3 +150,5 @@ tracks :
     url : http://t.co/L2CBxmzTUg
   - name : Praveen - Only to Make Ammends
     url : http://t.co/ag3Us8L3kL
+  - name : Verbose - shram
+    url : http://t.co/lkaM6frYOz
