--- a/_config.yml
+++ b/_config.yml
@@ -146,7 +146,7 @@ tracks :
     url : http://t.co/YCKXGIPIbc
   - name : Iqtu - Strategy 5
     url : http://t.co/rNBXiucwzi
-  - name : Monoceros - Sinu
+  - name : Monoceros - Sinus
     url : http://t.co/L2CBxmzTUg
   - name : Praveen - Only to Make Ammends
     url : http://t.co/ag3Us8L3kL
