--- a/_config.yml
+++ b/_config.yml
@@ -152,3 +152,5 @@ tracks :
     url : http://t.co/ag3Us8L3kL
   - name : Verbose - shram
     url : http://t.co/lkaM6frYOz
+  - name : Sovacusa - Osloka
+    url : http://t.co/UEN8ulgYtm
