--- a/_config.yml
+++ b/_config.yml
@@ -160,3 +160,7 @@ tracks :
     url : http://t.co/RZ0hsqpWNy
   - name : Monoceros - Fractions (2.0)
     url : http://t.co/EW5qU4R6Me
+  - name : aAirial - Smriti
+    url : http://t.co/fSN4HguhH3
+  - name : Yvat - Accession
+    url : http://t.co/Mg0Gl2PujQ
