--- a/_config.yml
+++ b/_config.yml
@@ -164,3 +164,5 @@ tracks :
     url : http://t.co/fSN4HguhH3
   - name : Yvat - Accession
     url : http://t.co/Mg0Gl2PujQ
+  - name : IJO - Jamaica Road
+    url : http://t.co/QgrDmcYdbp
