--- a/_config.yml
+++ b/_config.yml
@@ -168,3 +168,6 @@ tracks :
     url : http://t.co/Mg0Gl2PujQ
   - name : IJO - Jamaica Road
     url : http://t.co/QgrDmcYdbp
+  - name : IJO - Little Miss Summer
+    url : http://t.co/PLe1VFiK7i
+    
