--- a/_config.yml
+++ b/_config.yml
@@ -172,4 +172,7 @@ tracks :
     url : http://t.co/PLe1VFiK7i
   - name : Monoceros - Pizzicato spoon
     url : http://t.co/8oIF88p9Ry
+  - name : Verbose - Personaradar
+    url : http://t.co/5EYuuMc4Mh
+
     
