--- a/_config.yml
+++ b/_config.yml
@@ -174,5 +174,9 @@ tracks :
     url : http://t.co/8oIF88p9Ry
   - name : Verbose - Personaradar
     url : http://t.co/5EYuuMc4Mh
-
+  - name : Recue - Orchard Rd.
+    url : http://t.co/ksELzRWoul
+  - name : Veell - Qlocker
+    url : http://t.co/CHmhrFiYhB
+    
     
