stars of the lid radio

--- a/_config.yml
+++ b/_config.yml
@@ -185,4 +185,9 @@ tracks :
   - name : Monoceros - Life In a Fishbowl (Are They* Watching Us?)
     url : http://goo.gl/9zdcRd
     date: 2013-09-06 Fri 05:10:00
-
+  - name : Gas - Microscopic
+    url : http://goo.gl/Jp4Tgf
+    date: 2013-09-14 Sat 08:51:09
+  - name : Natural Snow Buildings - Memories found in a bill from a small animal vet
+    url : http://goo.gl/TOBxil
+    date: 2013-09-14 Sat 10:28:44
