--- a/_config.yml
+++ b/_config.yml
@@ -194,3 +194,18 @@ tracks :
   - name : Claude Debussy - Hommage a Rameau (Debussy)
     url : http://goo.gl/5DjDXb
     date: 2013-09-15 Sun 09:33:23
+  - name : Marcos Paiva - Edison N. 2
+    url : http://goo.gl/VtzUku
+    date: 2013-09-16 Mon 03:42:23
+  - name : Dum Dum Dum - 24689
+    url : http://goo.gl/e4GqDZ
+    date: 2013-09-16 Mon 03:45:37
+  - name : G.M.Orchestra - Erotic Club (Live)
+    url : http://goo.gl/iov5uT
+    date: 2013-09-16 Mon 03:48:51
+  - name : Sax a. Moryson - Rhythm Of My Hearts (Live)
+    url : http://goo.gl/JiwPtL
+    date: 2013-09-16 Mon 04:30:25
+  - name : pumpkin jacket - The perils of yeast
+    url : http://goo.gl/pf7IP7
+    date: 2013-09-16 Mon 05:35:22
