boards of canada radio

--- a/_config.yml
+++ b/_config.yml
@@ -212,3 +212,6 @@ tracks :
   - name : Mahat - Relief
     url : http://goo.gl/wMcQ8S
     date: 2013-09-16 Mon 16:30:33
+  - name : Eric Romine - Cosmic Dust
+    url : http://goo.gl/W6T0DL
+    date: 2013-09-17 Tue 04:32:43
