--- a/_config.yml
+++ b/_config.yml
@@ -215,3 +215,9 @@ tracks :
   - name : Eric Romine - Cosmic Dust
     url : http://goo.gl/W6T0DL
     date: 2013-09-17 Tue 04:32:43
+  - name : Fieldtriqp - Old Haunts
+    url : http://goo.gl/A1VvQS
+    date: 2013-09-19 Thu 04:27:24
+  - name : Fieldtriqp - windswept
+    url : http://goo.gl/25TXmG
+    date: 2013-09-19 Thu 05:39:44
