--- a/_config.yml
+++ b/_config.yml
@@ -221,3 +221,12 @@ tracks :
   - name : Fieldtriqp - windswept
     url : http://goo.gl/25TXmG
     date: 2013-09-19 Thu 05:39:44
+  - name : Gimmik - Square Two
+    url : http://goo.gl/YuuPgd
+    date: 2013-09-19 Thu 17:08:49
+  - name : Abfahrt Hinwil - Syntax Data
+    url : http://goo.gl/0biu9W
+    date: 2013-09-19 Thu 17:28:05
+  - name : Kettel - Not Gonna Get
+    url : http://goo.gl/XjDkoi
+    date: 2013-09-19 Thu 17:55:26
