--- a/_config.yml
+++ b/_config.yml
@@ -230,9 +230,9 @@ tracks :
   - name : Kettel - Not Gonna Get
     url : http://goo.gl/XjDkoi
     date: 2013-09-19 Thu 17:55:26
-  - name : Gimmik - Qoui Donc M'importe, Godot?!
-    url : http://goo.gl/kb9tJK
-    date: 2013-09-23 Mon 03:38:24
+#  - name : Gimmik - Qoui Donc M'importe, Godot?!
+#    url : http://goo.gl/kb9tJK
+#    date: 2013-09-23 Mon 03:38:24
   - name : Lackluster - Starcell U.K.
     url : http://goo.gl/d4uaNn
     date: 2013-09-23 Mon 03:51:03
