--- a/_config.yml
+++ b/_config.yml
@@ -230,6 +230,7 @@ tracks :
   - name : Kettel - Not Gonna Get
     url : http://goo.gl/XjDkoi
     date: 2013-09-19 Thu 17:55:26
+# find out which character breaks the JS
 #  - name : Gimmik - Qoui Donc M'importe, Godot?!
 #    url : http://goo.gl/kb9tJK
 #    date: 2013-09-23 Mon 03:38:24
