--- a/_config.yml
+++ b/_config.yml
@@ -236,3 +236,15 @@ tracks :
   - name : Lackluster - Starcell U.K.
     url : http://goo.gl/d4uaNn
     date: 2013-09-23 Mon 03:51:03
+  - name : Monoceros - How was the earth? (mother)
+    url : http://goo.gl/BgtCtk
+    date: 2013-09-24 Tue 03:31:44
+  - name : Praveen - Float
+    url : http://goo.gl/LyWAi2
+    date: 2013-09-24 Tue 03:38:00
+  - name : aAirial - On the eve of summer
+    url : http://goo.gl/Xtrh19
+    date: 2013-09-24 Tue 03:42:14
+  - name : Sinq - Acid Jazz
+    url : http://goo.gl/8K9RVy
+    date: 2013-09-24 Tue 04:25:25
