--- a/_config.yml
+++ b/_config.yml
@@ -249,3 +249,6 @@ tracks :
   - name : Sinq - Acid Jazz
     url : http://goo.gl/8K9RVy
     date: 2013-09-24 Tue 04:25:25
+  - name : Robert Schumann - Impromptu #3 (Schumann)
+    url : http://goo.gl/dbOCRA
+    date: 2013-09-27 Fri 17:18:41
