--- a/_config.yml
+++ b/_config.yml
@@ -261,3 +261,6 @@ tracks :
   - name : ESEM - Caffeine
     url : http://goo.gl/Z5MIT5
     date: 2013-10-01 Tue 06:42:53
+  - name : Monoceros - Capvespre
+    url : http://goo.gl/N6zSto
+    date: 2013-10-02 Wed 20:43:32
