--- a/_config.yml
+++ b/_config.yml
@@ -264,3 +264,12 @@ tracks :
   - name : Monoceros - Capvespre
     url : http://goo.gl/N6zSto
     date: 2013-10-02 Wed 20:43:32
+  - name : Point 7 - Space Formula
+    url : http://goo.gl/VzyQE7
+    date: 2013-10-03 Thu 05:01:39
+  - name : Proswell - Yuko Pailey
+    url : http://goo.gl/gHixJw
+    date: 2013-10-03 Thu 05:14:18
+  - name : Monoceros - happiness
+    url : http://goo.gl/IY9vwO
+    date: 2013-10-03 Thu 05:24:58
