--- a/_config.yml
+++ b/_config.yml
@@ -273,3 +273,9 @@ tracks :
   - name : Monoceros - happiness
     url : http://goo.gl/IY9vwO
     date: 2013-10-03 Thu 05:24:58
+  - name : Abfahrt Hinwil - Radiowellen
+    url : http://goo.gl/FQMnlk
+    date: 2013-10-04 Fri 05:05:13
+  - name : Kettel - Twinkle Twinkle That Is You
+    url : http://goo.gl/dlBJpx
+    date: 2013-10-04 Fri 06:36:28
