frog pocket radio

--- a/_config.yml
+++ b/_config.yml
@@ -279,3 +279,6 @@ tracks :
   - name : Kettel - Twinkle Twinkle That Is You
     url : http://goo.gl/dlBJpx
     date: 2013-10-04 Fri 06:36:28
+  - name : Gimmik - Floating Clear
+    url : http://goo.gl/ndn42a
+    date: 2013-10-05 Sat 12:28:17
