--- a/_config.yml
+++ b/_config.yml
@@ -282,3 +282,6 @@ tracks :
   - name : Gimmik - Floating Clear
     url : http://goo.gl/ndn42a
     date: 2013-10-05 Sat 12:28:17
+  - name : Monoceros - 6EQUJ5
+    url : http://goo.gl/dVz1Zi
+    date: 2013-10-07 Mon 04:13:45
