--- a/_config.yml
+++ b/_config.yml
@@ -285,3 +285,18 @@ tracks :
   - name : Monoceros - 6EQUJ5
     url : http://goo.gl/dVz1Zi
     date: 2013-10-07 Mon 04:13:45
+  - name : Monoceros - << (The big wave)
+    url : http://goo.gl/PURY4q
+    date: 2013-10-08 Tue 04:35:19
+  - name : General Fuzz - Fuzzy Prayer
+    url : http://goo.gl/KI4bzu
+    date: 2013-10-08 Tue 04:37:32
+  - name : iambic - Suburbium
+    url : http://goo.gl/TSwHT7
+    date: 2013-10-08 Tue 05:01:42
+  - name : Tineidae - Arc
+    url : http://goo.gl/IOLpIY
+    date: 2013-10-08 Tue 05:16:23
+  - name : Monoceros - Little cowboys
+    url : http://goo.gl/uEgY9N
+    date: 2013-10-08 Tue 06:02:20
