--- a/_config.yml
+++ b/_config.yml
@@ -300,3 +300,24 @@ tracks :
   - name : Monoceros - Little cowboys
     url : http://goo.gl/uEgY9N
     date: 2013-10-08 Tue 06:02:20
+  - name : Monoceros - A glorious afternoon
+    url : http://goo.gl/E5485n
+    date: 2013-10-09 Wed 04:48:47
+  - name : IJO - Hh Pin
+    url : http://goo.gl/MjL77O
+    date: 2013-10-09 Wed 04:55:11
+  - name : Boc Scadet - Like Larks
+    url : http://goo.gl/YXm6bm
+    date: 2013-10-09 Wed 05:12:13
+  - name : Monoceros - Artik
+    url : http://goo.gl/pvd4Qu
+    date: 2013-10-09 Wed 05:16:27
+  - name : Obfusc - Hologram Grip
+    url : http://goo.gl/cjOKkH
+    date: 2013-10-09 Wed 06:13:06
+  - name : aAirial - Intro
+    url : http://goo.gl/fG1nXt
+    date: 2013-10-09 Wed 06:39:23
+  - name : Zainetica - nestor house dub
+    url : http://goo.gl/DH8J4g
+    date: 2013-10-09 Wed 06:49:09
