--- a/_config.yml
+++ b/_config.yml
@@ -321,3 +321,9 @@ tracks :
   - name : Zainetica - nestor house dub
     url : http://goo.gl/DH8J4g
     date: 2013-10-09 Wed 06:49:09
+  - name : General Fuzz - Starry
+    url : http://goo.gl/bnk5tj
+    date: 2013-10-10 Thu 05:37:36
+  - name : General Fuzz - Goodbyes
+    url : http://goo.gl/VNVugO
+    date: 2013-10-10 Thu 06:44:44
