--- a/_config.yml
+++ b/_config.yml
@@ -231,7 +231,7 @@ tracks :
     url : http://goo.gl/XjDkoi
     date: 2013-09-19 Thu 17:55:26
 # find out which character breaks the JS (probably ? or !)
-  - name : Gimmik - Qoui Donc M'importe, Godot?
+  - name : Gimmik - Qoui Donc M'importe, Godot
     url : http://goo.gl/kb9tJK
     date: 2013-09-23 Mon 03:38:24
   - name : Lackluster - Starcell U.K.
