--- a/_config.yml
+++ b/_config.yml
@@ -327,3 +327,6 @@ tracks :
   - name : General Fuzz - Goodbyes
     url : http://goo.gl/VNVugO
     date: 2013-10-10 Thu 06:44:44
+  - name : The Q4 - One of These Days
+    url : http://goo.gl/VYuqVS
+    date: 2013-10-11 Fri 06:57:16
