--- a/_config.yml
+++ b/_config.yml
@@ -191,7 +191,7 @@ tracks :
   - name : Natural Snow Buildings - Memories found in a bill from a small animal vet
     url : http://goo.gl/TOBxil
     date: 2013-09-14 Sat 10:28:44
-  - name : Claude Debussy - Hommage a Rameau (Debussy)
+  - name : Claude Debussy - Hommage a Rameau
     url : http://goo.gl/5DjDXb
     date: 2013-09-15 Sun 09:33:23
   - name : Marcos Paiva - Edison N. 2
@@ -203,9 +203,9 @@ tracks :
   - name : G.M.Orchestra - Erotic Club (Live)
     url : http://goo.gl/iov5uT
     date: 2013-09-16 Mon 03:48:51
-  - name : Sax a. Moryson - Rhythm Of My Hearts (Live)
-    url : http://goo.gl/JiwPtL
-    date: 2013-09-16 Mon 04:30:25
+#  - name : Sax a. Moryson - Rhythm Of My Hearts (Live)
+#    url : http://goo.gl/JiwPtL
+#    date: 2013-09-16 Mon 04:30:25
   - name : pumpkin jacket - The perils of yeast
     url : http://goo.gl/pf7IP7
     date: 2013-09-16 Mon 05:35:22
