--- a/_config.yml
+++ b/_config.yml
@@ -462,7 +462,7 @@ tracks :
   - name : Groove Armada - Join Hands
     url : http://goo.gl/CC5wfl
     date: 2013-10-12 Sat 19:49:42
-  - name : Tricky - Strugglin'
+  - name : Tricky - Strugglin
     url : http://goo.gl/lx0XTU
     date: 2013-10-12 Sat 19:56:00
   - name : Emancipator - Black Lake
