ulrich schnauss and ragtime radio

--- a/_config.yml
+++ b/_config.yml
@@ -333,3 +333,9 @@ tracks :
   - name : The Kilimanjaro Darkjazz Ensemble - Embers
     url : http://goo.gl/dhncsd
     date: 2013-10-12 Sat 17:32:50
+  - name : General Fuzz - Comfort Zone
+    url : http://goo.gl/RBqS7
+    date: 2013-10-13 Sun 16:23:07
+  - name : Sonarbird - Cogs
+    url : http://goo.gl/t3px9d
+    date: 2013-10-13 Sun 17:30:52
