--- a/_config.yml
+++ b/_config.yml
@@ -339,3 +339,18 @@ tracks :
   - name : Sonarbird - Cogs
     url : http://goo.gl/t3px9d
     date: 2013-10-13 Sun 17:30:52
+  - name : aAirial - Aube
+    url : http://goo.gl/IyZcn6
+    date: 2013-10-15 Tue 04:42:43
+  - name : IJO - Gartenn
+    url : http://goo.gl/TTd8UV
+    date: 2013-10-15 Tue 05:08:21
+  - name : Point 7 - 15th of july
+    url : http://goo.gl/TpiqvQ
+    date: 2013-10-15 Tue 05:47:40
+  - name : Monoceros - My Imaginary Band
+    url : http://goo.gl/ceUfZ0
+    date: 2013-10-15 Tue 06:05:07
+  - name : IJO - Fragments
+    url : http://goo.gl/faiOEI
+    date: 2013-10-15 Tue 06:07:22
