--- a/_config.yml
+++ b/_config.yml
@@ -354,3 +354,9 @@ tracks :
   - name : IJO - Fragments
     url : http://goo.gl/faiOEI
     date: 2013-10-15 Tue 06:07:22
+  - name : Danieto - Coro Zapato
+    url : http://goo.gl/fVkGx8
+    date: 2013-10-17 Thu 05:50:57
+  - name : Veell - Relique
+    url : http://goo.gl/LiRQIb
+    date: 2013-10-17 Thu 06:29:07
