--- a/_config.yml
+++ b/_config.yml
@@ -360,3 +360,9 @@ tracks :
   - name : Veell - Relique
     url : http://goo.gl/LiRQIb
     date: 2013-10-17 Thu 06:29:07
+  - name : Monoceros - Camper
+    url : http://goo.gl/BgORkA
+    date: 2013-10-18 Fri 04:59:13
+  - name : Recue - Silversands
+    url : http://goo.gl/PVMFWh
+    date: 2013-10-18 Fri 05:48:43
