--- a/_config.yml
+++ b/_config.yml
@@ -414,3 +414,9 @@ tracks :
   - name : Labores Somnium - Moonlight Sonata
     url : http://goo.gl/Z9PVEw
     date: 2013-10-20 Sun 14:54:13
+  - name : Gimmik - 1 Min. Journey
+    url : http://goo.gl/cenuA6
+    date: 2013-10-21 Mon 05:24:07
+  - name : Sleepy Town Manufacture - Don't You Miss Me?
+    url : http://goo.gl/uYE4TE
+    date: 2013-10-21 Mon 06:38:28
