--- a/_config.yml
+++ b/_config.yml
@@ -417,6 +417,6 @@ tracks :
   - name : Gimmik - 1 Min. Journey
     url : http://goo.gl/cenuA6
     date: 2013-10-21 Mon 05:24:07
-  - name : Sleepy Town Manufacture - Don't You Miss Me?
+  - name : Sleepy Town Manufacture - Don t You Miss Me?
     url : http://goo.gl/uYE4TE
     date: 2013-10-21 Mon 06:38:28
