--- a/_config.yml
+++ b/_config.yml
@@ -425,3 +425,6 @@ tracks :
   - name : Sense - Korma
     url : http://goo.gl/wNBY4u
     date: 2013-10-22 Tue 05:48:05
+  - name : Point 7 - X Insert
+    url : http://goo.gl/v3hcGG
+    date: 2013-10-25 Fri 06:07:21
