--- a/_config.yml
+++ b/_config.yml
@@ -428,3 +428,27 @@ tracks :
   - name : Point 7 - X Insert
     url : http://goo.gl/v3hcGG
     date: 2013-10-25 Fri 06:07:21
+  - name : Monoceros - Monocrom
+    url : http://goo.gl/6tCYvR
+    date: 2013-10-26 Sat 08:36:04
+  - name : Monoceros - Little pieces
+    url : http://goo.gl/vWEMzc
+    date: 2013-10-26 Sat 10:51:24
+  - name : aAirial - Interlude
+    url : http://goo.gl/LZuEBS
+    date: 2013-10-26 Sat 12:28:11
+  - name : Proswell - Sciatica
+    url : http://goo.gl/pvzRCA
+    date: 2013-10-26 Sat 13:27:31
+  - name : Recue - Himanka
+    url : http://goo.gl/GjM2QQ
+    date: 2013-10-26 Sat 13:51:10
+  - name : General Fuzz - Eye Heart Knot
+    url : http://goo.gl/xcFfpH
+    date: 2013-10-26 Sat 15:21:06
+  - name : Proswell - Ei Gaho
+    url : http://goo.gl/z49Qa0
+    date: 2013-10-26 Sat 15:38:57
+  - name : IP Neva - September Fog
+    url : http://goo.gl/7o0hg6
+    date: 2013-10-26 Sat 15:43:14
