general fuzz radio

--- a/_config.yml
+++ b/_config.yml
@@ -452,3 +452,9 @@ tracks :
   - name : IP Neva - September Fog
     url : http://goo.gl/7o0hg6
     date: 2013-10-26 Sat 15:43:14
+  - name : General Fuzz - Mellow Drama
+    url : http://goo.gl/3oSlai
+    date: 2013-10-27 Sun 10:44:43
+  - name : To Destroy a City - Before The Outsides Gones Gone
+    url : http://goo.gl/GC5MSm
+    date: 2013-10-27 Sun 11:54:38
