--- a/_config.yml
+++ b/_config.yml
@@ -458,3 +458,6 @@ tracks :
   - name : To Destroy a City - Before The Outsides Gones Gone
     url : http://goo.gl/GC5MSm
     date: 2013-10-27 Sun 11:54:38
+  - name : Aydio - XHD
+    url : http://goo.gl/2764GH
+    date: 2013-10-28 Mon 05:32:51
