--- a/_config.yml
+++ b/_config.yml
@@ -461,3 +461,18 @@ tracks :
   - name : Aydio - XHD
     url : http://goo.gl/2764GH
     date: 2013-10-28 Mon 05:32:51
+  - name : Monoceros - Als núvols
+    url : http://goo.gl/IZY5DJ
+    date: 2013-10-29 Tue 04:09:11
+  - name : Sovacusa - Osloka (exclusive)
+    url : http://goo.gl/uOq5UH
+    date: 2013-10-29 Tue 04:19:44
+  - name : aAirial - Useless Tune
+    url : http://goo.gl/Lp7jLI
+    date: 2013-10-29 Tue 04:31:29
+  - name : Naono - Fotago
+    url : http://goo.gl/4ZLFf2
+    date: 2013-10-29 Tue 04:50:06
+  - name : Sinq - Are you there?
+    url : http://goo.gl/MKOxcZ
+    date: 2013-10-29 Tue 05:29:06
