abfahrt hinwil radio

--- a/_config.yml
+++ b/_config.yml
@@ -476,3 +476,15 @@ tracks :
   - name : Sinq - Are you there?
     url : http://goo.gl/MKOxcZ
     date: 2013-10-29 Tue 05:29:06
+  - name : Abfahrt Hinwil - Planquadrat
+    url : http://goo.gl/xHPXfr
+    date: 2013-10-30 Wed 03:55:41
+  - name : Gimmik - Le Ciel
+    url : http://goo.gl/wsyrTE
+    date: 2013-10-30 Wed 04:17:19
+  - name : Abfahrt Hinwil - Bumperstufe2
+    url : http://goo.gl/f1mSiS
+    date: 2013-10-30 Wed 04:20:34
+  - name : Abfahrt Hinwil - Tech7
+    url : http://goo.gl/kTYrSh
+    date: 2013-10-30 Wed 05:58:49
