the black dog radio

--- a/_config.yml
+++ b/_config.yml
@@ -488,3 +488,6 @@ tracks :
   - name : Abfahrt Hinwil - Tech7
     url : http://goo.gl/kTYrSh
     date: 2013-10-30 Wed 05:58:49
+  - name : Vector Lovers - Stranger Smiled at Me
+    url : http://goo.gl/60IxbW
+    date: 2013-10-31 Thu 06:00:11
