--- a/_config.yml
+++ b/_config.yml
@@ -491,3 +491,6 @@ tracks :
   - name : Vector Lovers - Stranger Smiled at Me
     url : http://goo.gl/60IxbW
     date: 2013-10-31 Thu 06:00:11
+  - name : Gimmik - 7th of May
+    url : http://goo.gl/MMvuL5
+    date: 2013-11-01 Fri 06:18:03
